--- a/questionPage.html
+++ b/questionPage.html
@@ -3,16 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Benchmark</title>
-    <link rel="stylesheet" href="assets/CSS/reset.css" />
+    <title>QUESTION</title>
+    <link rel="stylesheet" href="./assets/CSS/reset.css" />
     <link
-      rel="icon"
+      rel="stylesheet"
       href="https://s3-eu-west-1.amazonaws.com/tpd/logos/62a6277627ee655c1226b624/0x0.png"
     />
-    <meta name="description" content="Question Page" />
+    <link rel="stylesheet" href="./assets/CSS/style.css" />
+    <link rel="stylesheet" href="./assets/CSS/questionPage.css" />
   </head>
   <body>
-    <main></main>
-    <script src="JS/questionPage.js"></script>
+    <header>
+      <div id="divLogo">
+        <img id="logo" src="/assets/img/epicode_logo.png" alt="logo-epicode" />
+      </div>
+      <div id="divTimer">0:00</div>
+    </header>
+    <main>
+      <div id="container">
+        <section id="title">
+          <h1>Domanda</h1>
+        </section>
+        <section id="content">
+          <div id="questionImage"></div>
+          <div id="textualAnswer"></div>
+        </section>
+        <section id="button">
+          <div id="divMessage"></div>
+          <button id="nextQuestionButton">Prossima</button>
+        </section>
+        <section id="lastSection"></section>
+      </div>
+    </main>
   </body>
 </html>
