--- a/feedbackPage.html
+++ b/feedbackPage.html
@@ -1,36 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="assets/CSS/reset.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FEEDBACK</title>
-    <link rel="stylesheet" href="./assets/CSS/reset.css" />
+    <title>QUESTION</title>
     <link
-      rel="stylesheet"
+      rel="icon"
       href="https://s3-eu-west-1.amazonaws.com/tpd/logos/62a6277627ee655c1226b624/0x0.png"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./assets/CSS/style.css" />
-    <link rel="stylesheet" href="./assets/CSS/feedbackPage.css" />
+    <link rel="stylesheet" href="assets/CSS/feedbackPage.css" />
   </head>
   <body>
     <header>
       <div id="divLogo">
         <img id="logo" src="/assets/img/epicode_logo.png" alt="logo-epicode" />
       </div>
-      <div id="divTimer">0:00</div>
+      <div id="divTimer"></div>
     </header>
     <main>
       <div id="container">
         <section id="title">
-          <h1>Domanda</h1>
+          <h1>Tell us how it's going</h1>
         </section>
         <section id="content">
-          <div id="questionImage"></div>
-          <div id="textualAnswer"></div>
+          <p>
+            From 0 to 10, how likely are you to reccomend EPICODE to a friend or
+            a colleague?
+          </p>
+          <div id="star">
+            <i class="fas fa-star"></i><i class="fas fa-star"></i
+            ><i class="fas fa-star"></i><i class="fas fa-star"></i
+            ><i class="fas fa-star"></i><i class="fas fa-star"></i
+            ><i class="fas fa-star"></i><i class="fas fa-star"></i
+            ><i class="fas fa-star"></i><i class="fas fa-star"></i>
+          </div>
+          <form>
+            <label for="review"
+              >Leave us an open feedback about your experience so far</label
+            >
+            <input id="review" placeholder="Write your comment here" />
+          </form>
         </section>
         <section id="button">
           <div id="divMessage"></div>
-          <button id="nextQuestionButton">Prossima</button>
+          <button id="nextQuestionButton">Invia Feedback!</button>
         </section>
         <section id="lastSection"></section>
       </div>
