--- a/welcomePage.html
+++ b/welcomePage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WELCOME</title>
+
     <link rel="stylesheet" href="./assets/CSS/reset.css" />
     <link
       rel="stylesheet"
@@ -11,26 +12,58 @@
     />
     <link rel="stylesheet" href="./assets/CSS/style.css" />
     <link rel="stylesheet" href="./assets/CSS/welcomePage.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <div id="divLogo">
         <img id="logo" src="/assets/img/epicode_logo.png" alt="logo-epicode" />
       </div>
-      <div id="divTimer">0:00</div>
+      <div id="divTimer"></div>
     </header>
     <main>
       <div id="container">
         <section id="title">
-          <h1>Domanda</h1>
+          <h1>Welcome to <br /><span class="bold"> your exam</span></h1>
         </section>
         <section id="content">
-          <div id="questionImage"></div>
-          <div id="textualAnswer"></div>
+          <div id="instructions">
+            <h2>Instructions</h2>
+            <p>
+              We don't expect most engineers to know the answers to all of
+              these<br />
+              questions, so don't worry if you're unsure of a few of them.
+            </p>
+          </div>
+          <div id="list">
+            <ul>
+              <li>
+                Each question is <span class="bold">timed</span> and can only be
+                <span class="bold">answered once</span>.
+              </li>
+              <li>
+                Changing browser tab or opening other windows will
+                <span class="bold">invalidate the question</span>.
+              </li>
+              <li>
+                This exam will take approx.
+                <span class="bold">0-5 minutes</span>.
+              </li>
+            </ul>
+          </div>
         </section>
         <section id="button">
-          <div id="divMessage"></div>
-          <button id="nextQuestionButton">Prossima</button>
+          <label id="littleSquare"
+            ><input type="checkbox" checked="checked" id="checkBox"
+          /></label>
+          I promise to answer myself without help from anyone
+
+          <button id="nextQuestionButton">PROCEED</button>
         </section>
         <section id="lastSection"></section>
       </div>
