--- a/resultsPage.html
+++ b/resultsPage.html
@@ -33,21 +33,23 @@
         <section id="content">
           <div id="correctAnswers">
             <p id="staticOne">Correct</p>
-            <p id="correctPercentage"></p>
-            <p id="correctNumber"></p>
+            <p id="correctPercentage">66.7%</p>
+            <p id="correctNumber">2/6 questions</p>
           </div>
           <div id="graphic">
-            <p>Congratulasions! <br /><span>You passed the exam.</span></p>
-            <p>
-              We'll send you the certificate <br />in few ,inutes. <br />Check
-              your email (including <br />
-              promotion / spam folder)
-            </p>
+            <div>
+              <p>Congratulations!</p>
+              <p>You passed the exam.</p>
+              <p>
+                We'll send you the certificate in few minutes. Check your email
+                (including promotion / spam folder)
+              </p>
+            </div>
           </div>
           <div id="wrongAnswers">
             <p id="staticTwo">Wrong</p>
-            <p id="wrongPercentage"></p>
-            <p id="wrongNumber"></p>
+            <p id="wrongPercentage">66.6%</p>
+            <p id="wrongNumber">4/6 questions</p>
           </div>
         </section>
         <section id="button">
