modify html language

--- a/resultsPage.html
+++ b/resultsPage.html
@@ -27,34 +27,34 @@
     <main>
       <div id="container">
         <section id="title">
-          <h1>Results</h1>
-          <p>The summary of your answers:</p>
+          <h1>Risultati</h1>
+          <p>Il riepilogo delle tue risposte:</p>
         </section>
         <section id="content">
           <div id="correctAnswers">
-            <p id="staticOne">Correct</p>
-            <p id="correctPercentage">66.7%</p>
-            <p id="correctNumber">2/6 questions</p>
+            <p id="staticOne">Corrette</p>
+            <p id="correctPercentage"></p>
+            <p id="correctNumber"></p>
           </div>
           <div id="graphic">
             <div>
-              <p>Congratulations!</p>
-              <p>You passed the exam.</p>
+              <p>Congratulazioni!</p>
+              <p>Hai superato l'esame.</p>
               <p>
-                We'll send you the certificate in few minutes. Check your email
-                (including promotion / spam folder)
+                Ti mandere il certificato in pochi minuti. Controlla la tua
+                email (controlla anche promozioni e spam).
               </p>
             </div>
           </div>
           <div id="wrongAnswers">
-            <p id="staticTwo">Wrong</p>
-            <p id="wrongPercentage">66.6%</p>
-            <p id="wrongNumber">4/6 questions</p>
+            <p id="staticTwo">Sbagliate</p>
+            <p id="wrongPercentage"></p>
+            <p id="wrongNumber"></p>
           </div>
         </section>
         <section id="button">
           <div id="divMessage"></div>
-          <button id="trasparent">RATE US</button>
+          <button id="trasparent">DICCI LA TUA</button>
         </section>
       </div>
     </main>
