finishes css and html

--- a/welcomePage.html
+++ b/welcomePage.html
@@ -58,12 +58,16 @@
           </div>
         </section>
         <section id="button">
-          <label id="littleSquare"
-            ><input type="checkbox" checked="checked" id="checkBox"
-          /></label>
-          I promise to answer myself without help from anyone
+          <div id="terms">
+            <input type="checkbox" id="checkBox" /><label
+              for="checkBox"
+              id="check"
+            >
+              I promise to answer myself without help from anyone
+            </label>
 
-          <button id="nextQuestionButton">PROCEED</button>
+            <button id="bottone">PROCEED</button>
+          </div>
         </section>
         <section id="lastSection"></section>
       </div>
