--- a/feedbackPage.html
+++ b/feedbackPage.html
@@ -37,11 +37,16 @@
             a colleague?
           </p>
           <div id="star">
-            <i class="fas fa-star"></i><i class="fas fa-star"></i
-            ><i class="fas fa-star"></i><i class="fas fa-star"></i
-            ><i class="fas fa-star"></i><i class="fas fa-star"></i
-            ><i class="fas fa-star"></i><i class="fas fa-star"></i
-            ><i class="fas fa-star"></i><i class="fas fa-star"></i>
+            <i id="S1" class="fas fa-star"></i>
+            <i id="S2" class="fas fa-star"></i>
+            <i id="S3" class="fas fa-star"></i
+            ><i id="S4" class="fas fa-star"></i>
+            <i id="S5" class="fas fa-star"></i
+            ><i id="S6" class="fas fa-star"></i>
+            <i id="S7" class="fas fa-star"></i
+            ><i id="S8" class="fas fa-star"></i>
+            <i id="S9" class="fas fa-star"></i>
+            <i id="S10" class="fas fa-star"></i>
           </div>
           <form>
             <label for="review"
@@ -57,5 +62,6 @@
         <section id="lastSection"></section>
       </div>
     </main>
+    <script src="JS/feedbackPage.js"></script>
   </body>
 </html>
