--- a/resultsPage.html
+++ b/resultsPage.html
@@ -1,62 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RESULTS</title>
-    <link rel="stylesheet" href="./assets/CSS/reset.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="icon"
-      href="https://s3-eu-west-1.amazonaws.com/tpd/logos/62a6277627ee655c1226b624/0x0.png"
-    />
-    <link rel="stylesheet" href="./assets/CSS/style.css" />
-    <link rel="stylesheet" href="./assets/CSS/resultsPage.css" />
-  </head>
-  <body>
-    <header>
-      <div id="divLogo">
-        <img id="logo" src="/assets/img/epicode_logo.png" alt="logo-epicode" />
-      </div>
-    </header>
-    <main>
-      <div id="container">
-        <section id="title">
-          <h1>Risultati</h1>
-          <p>Il riepilogo delle tue risposte:</p>
-        </section>
-        <section id="content">
-          <div id="correctAnswers">
-            <p id="staticOne">Corrette</p>
-            <p id="correctPercentage"></p>
-            <p id="correctNumber"></p>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>RESULTS</title>
+  <link rel="stylesheet" href="./assets/CSS/reset.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet" />
+  <link rel="icon" href="https://s3-eu-west-1.amazonaws.com/tpd/logos/62a6277627ee655c1226b624/0x0.png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./assets/CSS/style.css" />
+  <link rel="stylesheet" href="./assets/CSS/resultsPage.css" />
+</head>
+
+<body>
+  <header>
+    <div id="divLogo">
+      <img id="logo" src="/assets/img/epicode_logo.png" alt="logo-epicode" />
+    </div>
+  </header>
+  <main>
+    <div id="container">
+      <section id="title">
+        <h1>Risultati</h1>
+        <p>Il riepilogo delle tue risposte:</p>
+      </section>
+      <section id="content">
+        <div id="correctAnswers">
+          <p id="staticOne">Corrette</p>
+          <p id="correctPercentage"></p>
+          <p id="correctNumber"></p>
+        </div>
+        <div id="graphic">
+          <div>
+            <p>Congratulazioni!</p>
+            <p>Hai superato l'esame.</p>
+            <p>
+              Ti mandere il certificato in pochi minuti. Controlla la tua
+              email (controlla anche promozioni e spam).
+            </p>
           </div>
-          <div id="graphic">
-            <div>
-              <p>Congratulazioni!</p>
-              <p>Hai superato l'esame.</p>
-              <p>
-                Ti mandere il certificato in pochi minuti. Controlla la tua
-                email (controlla anche promozioni e spam).
-              </p>
-            </div>
-          </div>
-          <div id="wrongAnswers">
-            <p id="staticTwo">Sbagliate</p>
-            <p id="wrongPercentage"></p>
-            <p id="wrongNumber"></p>
-          </div>
-        </section>
-        <section id="button">
-          <div id="divMessage"></div>
-          <button id="trasparent">DICCI LA TUA</button>
-        </section>
-      </div>
-    </main>
-  </body>
+        </div>
+        <div id="wrongAnswers">
+          <p id="staticTwo">Sbagliate</p>
+          <p id="wrongPercentage"></p>
+          <p id="wrongNumber"></p>
+        </div>
+      </section>
+      <section id="button">
+        <div id="divMessage"></div>
+        <button id="trasparent">DICCI LA TUA</button>
+      </section>
+      <section id="lastSection"></section>
+    </div>
+  </main>
+  <script src="./JS/resultsPage.js"></script>
+</body>
+
 </html>
