--- a/questionPage.html
+++ b/questionPage.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://s3-eu-west-1.amazonaws.com/tpd/logos/62a6277627ee655c1226b624/0x0.png" />
   <link rel="stylesheet" href="./assets/CSS/style.css" />
   <link rel="stylesheet" href="./assets/CSS/questionPage.css" />
+  <link rel="stylesheet" href="./assets/CSS/timer.css" />
 </head>
 
 <body>
@@ -16,7 +17,20 @@
     <div id="divLogo">
       <img id="logo" src="/assets/img/epicode_logo.png" alt="logo-epicode" />
     </div>
-    <div id="divTimer">0:00</div>
+    <div id="divTimer">
+      <!--
+      <div class="timer-inner">
+        <p id="count"></p>
+        <span class="inner-text-top">SECONDS</span>
+        <span id="time-left"></span>
+        <span class="inner-text-bot">REMAINING</span>
+        <svg class="progress-ring" width="100px" height="100px">
+          <circle class="progress-ring__background" cx="50" cy="50" r="45"></circle>
+          <circle class="progress-ring__circle" cx="50" cy="50" r="45"></circle>
+        </svg>
+      </div>
+    -->
+    </div>
   </header>
   <main>
     <div id="container">
