--- a/questionPage.html
+++ b/questionPage.html
@@ -13,12 +13,13 @@
 </head>
 
 <body>
-  <header>
-    <div id="divLogo">
-      <img id="logo" src="/assets/img/epicode_logo.png" alt="logo-epicode" />
-    </div>
-    <div id="divTimer">
-      <!--
+  <div id="container">
+    <header>
+      <div id="divLogo">
+        <img id="logoImg" src="/assets/img/epicode_logo.png" alt="logo-epicode" />
+      </div>
+      <div id="divTimer">
+        <!--
       <div class="timer-inner">
         <p id="count"></p>
         <span class="inner-text-top">SECONDS</span>
@@ -30,10 +31,9 @@
         </svg>
       </div>
     -->
-    </div>
-  </header>
-  <main>
-    <div id="container">
+      </div>
+    </header>
+    <main>
       <section id="title">
         <h1>Domanda</h1>
       </section>
@@ -46,7 +46,7 @@
         <button id="nextQuestionButton">Prossima</button>
       </section>
       <section id="lastSection"></section>
-    </div>
+  </div>
   </main>
   <script src="./JS/questions.js"></script>
   <script src="./JS/questionsPage.js"></script>
