--- a/welcomePage.html
+++ b/welcomePage.html
@@ -1,76 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WELCOME</title>
 
-    <link rel="stylesheet" href="./assets/CSS/reset.css" />
-    <link
-      rel="stylesheet"
-      href="https://s3-eu-west-1.amazonaws.com/tpd/logos/62a6277627ee655c1226b624/0x0.png"
-    />
-    <link rel="stylesheet" href="./assets/CSS/style.css" />
-    <link rel="stylesheet" href="./assets/CSS/welcomePage.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WELCOME</title>
+
+  <link rel="stylesheet" href="./assets/CSS/reset.css" />
+  <link rel="stylesheet" href="https://s3-eu-west-1.amazonaws.com/tpd/logos/62a6277627ee655c1226b624/0x0.png" />
+  <link rel="stylesheet" href="./assets/CSS/style.css" />
+  <link rel="stylesheet" href="./assets/CSS/welcomePage.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit:wght@100..900&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body>
+  <div id="container">
     <header>
       <div id="divLogo">
-        <img id="logo" src="/assets/img/epicode_logo.png" alt="logo-epicode" />
+        <img id="logoImg" src="/assets/img/epicode_logo.png" alt="logo-epicode" />
       </div>
       <div id="divTimer"></div>
     </header>
     <main>
-      <div id="container">
-        <section id="title">
-          <h1>Welcome to <br /><span class="bold"> your exam</span></h1>
-        </section>
-        <section id="content">
-          <div id="instructions">
-            <h2>Instructions</h2>
-            <p>
-              We don't expect most engineers to know the answers to all of
-              these<br />
-              questions, so don't worry if you're unsure of a few of them.
-            </p>
-          </div>
-          <div id="list">
-            <ul>
-              <li>
-                Each question is <span class="bold">timed</span> and can only be
-                <span class="bold">answered once</span>.
-              </li>
-              <li>
-                Changing browser tab or opening other windows will
-                <span class="bold">invalidate the question</span>.
-              </li>
-              <li>
-                This exam will take approx.
-                <span class="bold">0-5 minutes</span>.
-              </li>
-            </ul>
-          </div>
-        </section>
-        <section id="button">
-          <div id="terms">
-            <input type="checkbox" id="checkBox" /><label
-              for="checkBox"
-              id="check"
-            >
-              I promise to answer myself without help from anyone
-            </label>
+      <section id="title">
+        <h1>Benvenuto <br /><span class="bold"> al tuo esame</span></h1>
+      </section>
+      <section id="content">
+        <div id="instructions">
+          <h2>Istruzioni</h2>
+          <p>
+            Non ci aspettiamo che la maggior parte degli ingegneri conosca le risposte a tutte queste<br />
+            domande, quindi non preoccuparti se non sei sicuro di alcune di esse.
+          </p>
+        </div>
+        <div id="list">
+          <ul>
+            <li>
+              Ogni domanda è <span class="bold">temporizzata</span> e può essere
+              <span class="bold">risposta una sola volta</span>.
+            </li>
+            <li>
+              Cambiare scheda del browser o aprire altre finestre
+              <span class="bold">invaliderà la domanda</span>.
+            </li>
+            <li>
+              Questo esame durerà circa
+              <span class="bold">0-5 minuti</span>.
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section id="button">
+        <div id="terms">
+          <input type="checkbox" id="checkBox" /><label for="checkBox" id="check">
+            Prometto di rispondere da solo senza l'aiuto di nessuno
+          </label>
+          <button id="buttonProceed">Procedi</button>
+        </div>
+      </section>
+      <section id="lastSection"></section>
+  </div>
+  </main>
+</body>
 
-            <button id="bottone">PROCEED</button>
-          </div>
-        </section>
-        <section id="lastSection"></section>
-      </div>
-    </main>
-  </body>
 </html>
