--- a/questionPage.html
+++ b/questionPage.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://s3-eu-west-1.amazonaws.com/tpd/logos/62a6277627ee655c1226b624/0x0.png" />
   <link rel="stylesheet" href="./assets/CSS/style.css" />
   <link rel="stylesheet" href="./assets/CSS/questionPage.css" />
-  <link rel="stylesheet" href="./assets/CSS/timer.css" />
+  <!-- <link rel="stylesheet" href="./assets/CSS/timer.css" /> -->
 </head>
 
 <body>
