--- a/welcomePage.html
+++ b/welcomePage.html
@@ -59,12 +59,13 @@
           <input type="checkbox" id="checkBox" /><label for="checkBox" id="check">
             Prometto di rispondere da solo senza l'aiuto di nessuno
           </label>
-          <button id="buttonProceed">Procedi</button>
+          <button class="activatedButton" id="buttonProceed" disabled>Procedi</button>
         </div>
       </section>
       <section id="lastSection"></section>
   </div>
   </main>
+  <script src="./JS/welcomePage.js"></script>
 </body>
 
 </html>
