--- a/questionPage.html
+++ b/questionPage.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://s3-eu-west-1.amazonaws.com/tpd/logos/62a6277627ee655c1226b624/0x0.png" />
   <link rel="stylesheet" href="./assets/CSS/style.css" />
   <link rel="stylesheet" href="./assets/CSS/questionPage.css" />
-  <!-- <link rel="stylesheet" href="./assets/CSS/timer.css" /> -->
+  <link rel="stylesheet" href="./assets/CSS/LolloTimer.css" />
 </head>
 
 <body>
@@ -49,6 +49,8 @@
   </div>
   </main>
   <script src="./JS/questions.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>
+  <script src="./JS/LolloTimer.js"></script>
   <script src="./JS/questionsPage.js"></script>
 </body>
 
