--- a/feedbackPage.html
+++ b/feedbackPage.html
@@ -34,9 +34,12 @@
         <div id="star">
           <i id="S1" class="fas fa-star"></i>
           <i id="S2" class="fas fa-star"></i>
-          <i id="S3" class="fas fa-star"></i><i id="S4" class="fas fa-star"></i>
-          <i id="S5" class="fas fa-star"></i><i id="S6" class="fas fa-star"></i>
-          <i id="S7" class="fas fa-star"></i><i id="S8" class="fas fa-star"></i>
+          <i id="S3" class="fas fa-star"></i>
+          <i id="S4" class="fas fa-star"></i>
+          <i id="S5" class="fas fa-star"></i>
+          <i id="S6" class="fas fa-star"></i>
+          <i id="S7" class="fas fa-star"></i>
+          <i id="S8" class="fas fa-star"></i>
           <i id="S9" class="fas fa-star"></i>
           <i id="S10" class="fas fa-star"></i>
         </div>
