--- a/welcomePage.html
+++ b/welcomePage.html
@@ -59,7 +59,7 @@
           <input type="checkbox" id="checkBox" /><label for="checkBox" id="check">
             Prometto di rispondere da solo senza l'aiuto di nessuno
           </label>
-          <button class="activatedButton" id="buttonProceed" disabled>Procedi</button>
+          <button id="buttonProceed" disabled>Procedi</button>
         </div>
       </section>
       <section id="lastSection"></section>
