--- a/giulia/graphic.html
+++ b/giulia/graphic.html
@@ -10,8 +10,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
   </head>
   <body>
-    <div id="donut">
-      <canvas id="myChart" width="400" height="400"></canvas>
+    <div class="wrapper">
+      <canvas id="myChart"></canvas>
+    </div>
+    <div class="wrapper2">
+      <canvas id="chart2"></canvas>
     </div>
 
     <script src="./questions.js"></script>
