--- a/giulia/graphic.html
+++ b/giulia/graphic.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Graphic</title>
-    <!---per integrare grafici nei documenti serve scaricare una libreria del repositary di github, per farlo basta aggiungere nell'head un tag script detto chart.js. , questa è la libreria
-    il disegno grafico si avvale del canvas di html. Il canvas è un elemento utile per disegnare elementi grafici sfruttando js-->
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Grafici a Ciambella</title>
+   
+    <link rel="stylesheet" href="./graphic.css"> <!-- Se hai un file CSS -->
+    <script src="./graphic.js" defer></script> <!-- Collega il tuo file JavaScript -->
+</head>
+<body>
+  <div id="graphic">
+    <h2 class="chart-title">Risultati del Quiz</h2>
+    <canvas id="myChart" width="400" height="400"></canvas>
+    <p class="results-message">Hai ottenuto <span id="finalScore"></span> risposte corrette su <span id="totalQuestions"></span> domande.</p>
+    <div id="endExamText"></div> <!--questo dovrebbe esser integrato al file results page nel div graphic-->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-  </head>
-  <body>
-    <div id="donut">
-      <canvas id="myChart" width="400" height="400"></canvas>
-    </div>
-
-    <script src="./questions.js"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!--questo alla fine di tutto-->
+</body>
 </html>
