Easter Egg Welcome Page

--- a/welcomePage.html
+++ b/welcomePage.html
@@ -66,6 +66,9 @@
   </div>
   </main>
   <script src="./JS/welcomePage.js"></script>
+  <!-- ;) -->
+  <script src="./JS/questions.js"></script>
+  <script src="./JS/welcomePageEasterEgg.js"></script>
 </body>
 
 </html>
