Aggiunta domande geografie e attivazioone easterEgg

--- a/questionPage.html
+++ b/questionPage.html
@@ -52,6 +52,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>
   <script src="./JS/LolloTimer.js"></script>
   <script src="./JS/questionsPage.js"></script>
+  <script src="./JS/otherPageEasterEgg.js"></script>
 </body>
 
 </html>
