--- a/resultsPage.html
+++ b/resultsPage.html
@@ -54,6 +54,7 @@
   </div>
   </main>
   <script src="./JS/resultsPage.js"></script>
+  <script src="./JS/otherPageEasterEgg.js"></script>
 </body>
 
 </html>
