--- a/feedbackPage.html
+++ b/feedbackPage.html
@@ -56,6 +56,7 @@
   </div>
   </main>
   <script src="JS/feedbackPage.js"></script>
+  <script src="./JS/otherPageEasterEgg.js"></script>
 </body>
 
 </html>
