--- a/welcomePage.html
+++ b/welcomePage.html
@@ -7,7 +7,7 @@
   <title>WELCOME</title>
 
   <link rel="stylesheet" href="./assets/CSS/reset.css" />
-  <link rel="stylesheet" href="https://s3-eu-west-1.amazonaws.com/tpd/logos/62a6277627ee655c1226b624/0x0.png" />
+  <link rel="icon" href="https://s3-eu-west-1.amazonaws.com/tpd/logos/62a6277627ee655c1226b624/0x0.png" />
   <link rel="stylesheet" href="./assets/CSS/style.css" />
   <link rel="stylesheet" href="./assets/CSS/welcomePage.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
