--- a/resultsPage.html
+++ b/resultsPage.html
@@ -36,7 +36,7 @@
           <p id="correctNumber"></p>
         </div>
         <div id="graphic">
-          <canvas id="myChart"></canvas>
+          <canvas id="myDoughnutChart"></canvas>
           <div id="endExamText">
           </div>
         </div>
@@ -54,6 +54,7 @@
   </div>
   </main>
   <script src="./JS/resultsPage.js"></script>
+   <script src="./JS/grafico.js"></script>
   <script src="./JS/otherPageEasterEgg.js"></script>
 </body>
 
