--- a/resultsPage.html
+++ b/resultsPage.html
@@ -53,8 +53,11 @@
       <section id="lastSection"></section>
   </div>
   </main>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+
+  <script src="./JS/grafico.js"></script>
   <script src="./JS/resultsPage.js"></script>
-   <script src="./JS/grafico.js"></script>
+   
   <script src="./JS/otherPageEasterEgg.js"></script>
 </body>
 
