--- a/grafico.html
+++ b/grafico.html
@@ -8,6 +8,6 @@
   <body>
     <canvas id="myDoughnutChart" width="400" height="400"></canvas>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-    <script src="./donut.js"></script>
+    <script src="./JS/grafico.js"></script>
   </body>
 </html>
