--- a/questionPage.html
+++ b/questionPage.html
@@ -1,58 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>QUESTION</title>
+    <link rel="stylesheet" href="./assets/CSS/reset.css" />
+    <link
+      rel="icon"
+      href="https://s3-eu-west-1.amazonaws.com/tpd/logos/62a6277627ee655c1226b624/0x0.png"
+    />
+    <link rel="stylesheet" href="./assets/CSS/style.css" />
+    <link rel="stylesheet" href="./assets/CSS/questionPage.css" />
+    <link rel="stylesheet" href="./assets/CSS/LolloTimer.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>QUESTION</title>
-  <link rel="stylesheet" href="./assets/CSS/reset.css" />
-  <link rel="stylesheet" href="https://s3-eu-west-1.amazonaws.com/tpd/logos/62a6277627ee655c1226b624/0x0.png" />
-  <link rel="stylesheet" href="./assets/CSS/style.css" />
-  <link rel="stylesheet" href="./assets/CSS/questionPage.css" />
-  <link rel="stylesheet" href="./assets/CSS/LolloTimer.css" />
-</head>
-
-<body>
-  <div id="container">
-    <header>
-      <div id="divLogo">
-        <img id="logoImg" src="/assets/img/epicode_logo.png" alt="logo-epicode" />
-      </div>
-      <div id="divTimer">
-        <!--
-      <div class="timer-inner">
-        <p id="count"></p>
-        <span class="inner-text-top">SECONDS</span>
-        <span id="time-left"></span>
-        <span class="inner-text-bot">REMAINING</span>
-        <svg class="progress-ring" width="100px" height="100px">
-          <circle class="progress-ring__background" cx="50" cy="50" r="45"></circle>
-          <circle class="progress-ring__circle" cx="50" cy="50" r="45"></circle>
-        </svg>
-      </div>
-    -->
-      </div>
-    </header>
-    <main>
-      <section id="title">
-        <h1>Domanda</h1>
-      </section>
-      <section id="content">
-        <div id="questionImage"></div>
-        <div id="textualAnswer"></div>
-      </section>
-      <section id="button">
-        <div id="divMessage"></div>
-        <button id="nextQuestionButton">Prossima</button>
-      </section>
-      <section id="lastSection"></section>
-  </div>
-  </main>
-  <script src="./JS/questions.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>
-  <script src="./JS/LolloTimer.js"></script>
-  <script src="./JS/questionsPage.js"></script>
-  <script src="./JS/otherPageEasterEgg.js"></script>
-</body>
-
+  <body>
+    <div id="container">
+      <header>
+        <div id="divLogo">
+          <img
+            id="logoImg"
+            src="/assets/img/epicode_logo.png"
+            alt="logo-epicode"
+          />
+        </div>
+        <div id="divTimer"></div>
+      </header>
+      <main>
+        <section id="title">
+          <h1>Domanda</h1>
+        </section>
+        <section id="content">
+          <div id="questionImage"></div>
+          <div id="textualAnswer"></div>
+        </section>
+        <section id="button">
+          <div id="divMessage"></div>
+          <button id="nextQuestionButton">Prossima</button>
+        </section>
+        <section id="lastSection"></section>
+      </main>
+    </div>
+    <script src="./JS/questions.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>
+    <script src="./JS/LolloTimer.js"></script>
+    <script src="./JS/questionsPage.js"></script>
+    <script src="./JS/otherPageEasterEgg.js"></script>
+  </body>
 </html>
