title bar updated

--- a/feedbackPage.html
+++ b/feedbackPage.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="assets/CSS/reset.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FEEDBACK</title>
+    <title>LASCIACI UN FEEDBACK | BENCHMARK</title>
     <link
       rel="icon"
       href="https://s3-eu-west-1.amazonaws.com/tpd/logos/62a6277627ee655c1226b624/0x0.png"
