--- a/resultsPage.html
+++ b/resultsPage.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>RESULTS</title>
+  <title>RISULTATI | BENCHMARK</title>
   <link rel="stylesheet" href="./assets/CSS/reset.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
