Modify meta description

--- a/questionPage.html
+++ b/questionPage.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOMANDE | BENCHMARK</title>
+    <meta
+      name="description"
+      content="Answer the questions of your Benchmark exam. Each question is timed, and responses are final."
+    />
+
     <link rel="stylesheet" href="./assets/CSS/reset.css" />
     <link
       rel="icon"
