--- a/welcomePage.html
+++ b/welcomePage.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BENVENUTO | BENCHMARK</title>
-
+    <meta
+      name="description"
+      content="Welcome to your exam on Benchmark. Follow the instructions to start and complete the test within the time limit."
+    />
     <link rel="stylesheet" href="./assets/CSS/reset.css" />
     <link
       rel="icon"
