--- a/feedbackPage.html
+++ b/feedbackPage.html
@@ -4,6 +4,10 @@
     <link rel="stylesheet" href="assets/CSS/reset.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Provide feedback on your Benchmark exam experience. Rate us from 0 to 10 and leave additional comments."
+    />
     <title>LASCIACI UN FEEDBACK | BENCHMARK</title>
     <link
       rel="icon"
