--- a/questionPage.html
+++ b/questionPage.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>QUESTION</title>
+  <title>QUESTIONS</title>
   <link rel="stylesheet" href="./assets/CSS/reset.css" />
   <link rel="stylesheet" href="https://s3-eu-west-1.amazonaws.com/tpd/logos/62a6277627ee655c1226b624/0x0.png" />
   <link rel="stylesheet" href="./assets/CSS/style.css" />
@@ -19,18 +19,6 @@
         <img id="logoImg" src="/assets/img/epicode_logo.png" alt="logo-epicode" />
       </div>
       <div id="divTimer">
-        <!--
-      <div class="timer-inner">
-        <p id="count"></p>
-        <span class="inner-text-top">SECONDS</span>
-        <span id="time-left"></span>
-        <span class="inner-text-bot">REMAINING</span>
-        <svg class="progress-ring" width="100px" height="100px">
-          <circle class="progress-ring__background" cx="50" cy="50" r="45"></circle>
-          <circle class="progress-ring__circle" cx="50" cy="50" r="45"></circle>
-        </svg>
-      </div>
-    -->
       </div>
     </header>
     <main>
