--- a/resultsPage.html
+++ b/resultsPage.html
@@ -53,11 +53,11 @@
       <section id="lastSection"></section>
   </div>
   </main>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
 
   <script src="./JS/grafico.js"></script>
   <script src="./JS/resultsPage.js"></script>
-   
+
   <script src="./JS/otherPageEasterEgg.js"></script>
 </body>
 
